# SuiPass

./: .gitignore  CREDENTIAL_MIGRATION_FLOW.md  DEMO_SHOWCASE_README.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  suipass.seal.config.json
backend/: index.js  migrate.js  package-lock.json  package.json  schema.sql
backend/routes/: projects.js  users.js  zklogin-prover.js  zklogin.js
backend/zklogin-rs/: Cargo.toml
backend/zklogin-rs/src/: main.rs  salt.rs
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: CryptoTestComponent.tsx  PermissionProgramTester.tsx  activity-log.tsx  ai-assistant.tsx  billing-payment.tsx  billing-plans.tsx  change-requests-details-header.tsx  change-requests-header.tsx  change-requests-list.tsx  client-providers.tsx  connect-wallet-button.tsx  connect-wallet-wallet-button.tsx  create-secret-form.tsx  credential-upgrade.tsx  dashboard-header.tsx  dashboard-overview.tsx  dashboard-preview.tsx  dashboard-sidebar.tsx  enhanced-secure-vault-showcase.tsx  fallback-status.tsx  floating-walrus-seal-widget.tsx  landing-features.tsx  landing-footer.tsx  landing-header.tsx  landing-hero.tsx  landing-pricing.tsx  login-form.tsx  new-project-form.tsx  payment-history.tsx  personal-credential-detail.tsx  personal-vault.tsx  project-activity.tsx  project-cards.tsx  project-detail.tsx  project-team.tsx  projects-header.tsx  (+13 more)
scripts/: add_policy_member.sh  create_policy.sh  publish_policy.sh
tests/: seal_walrus.integration.test.ts
(+50 files in other folders)
