[package]
name = "zklogin_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
ed25519-dalek = "2.1"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
